# Environmental-monitoring-water-management

./: .dockerignore  .gitignore  Dockerfile  README.md  backend_main.py  config.yaml  dashboard_api.py  distribution_main.py  docker-compose.yml  energy_main.py  filtration_main.py  main.py  render.yaml  requirements.txt  run_all.bat  run_fullstack.ps1  setup.cfg  water_main.py
dashboard/: eslint_report.json  index.html  package-lock.json  package.json  parse_eslint.py  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  api.ts  asaaseApi.ts  index.css
dashboard/src/components/: ControlCenter.tsx  Dashboard.tsx  DistributionView.tsx  EnergyView.tsx  EnvironmentalView.tsx  FiltrationDiagram.tsx  Login.tsx  MaintenanceForecast.tsx  (+7 more)
data/: asaase.db
runs/: data.db  data.db-shm  data.db-wal  energy.db  filtration_latest.json
src/: main.py
src/asaase/: __init__.py  api.py  config.json  db.py  db_setup.py  health_monitor.py  logger.py  mission_engine.py  models.py  radio_listener.py  reports.py  sms.py
src/backend/: server.py
src/dashboard/: __init__.py
src/distribution/: route.py
src/energy/: ingest.py  storage.py
src/energy_statistics/: __init__.py
src/environmental_monitoring/: __init__.py  alerts.py  monitor.py  utils.py
src/filtration/: system.py
src/filtration_system/: __init__.py
src/storage/: sqlite_store.py
src/water/: ingest.py  rules.py
src/water_quality/: __init__.py
tests/: test_monitor.py
tools/: client.py  export_csv.py  export_schemas.py  preflight_check.py  run_all.py  scheduler.py  setup_env.py  verify_setup.py
(+10 files in other folders)
