[metadata]
name = environmental-monitoring-water-management
version = 0.1.0
description = Environmental Monitoring and Water Management System
author = Your Name
license = MIT

[options]
package_dir =
    =src
packages = find:
install_requires =
    opencv-python>=4.8.0
    numpy>=1.24.0
    PyYAML>=6.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    envmon = src.environmental_monitoring.cli:main